--- a/src/locales/languages/uk.json
+++ b/src/locales/languages/uk.json
@@ -56,7 +56,7 @@
   },
   "search": {
     "search": "Вишукувати",
-    "searchPlaceholder": "Пошук за назвою організації",
+    "searchPlaceholder": "ППошук за іменем або адресою",
     "filters": "Фільтри",
     "deleteFilters": "Видалення всіх фільтрів",
     "seeFilters": "Переглянути всі фільтри",
