--- a/src/locales/languages/uk.json
+++ b/src/locales/languages/uk.json
@@ -5,7 +5,8 @@
     "register": "Реєстрація",
     "logout": "Вийти",
     "search": "Дослідження",
-    "reset": "Скинути"
+    "reset": "Скинути",
+    "unavailableForThisFeature": "Недоступно для цієї функції"
   },
   "alerts": {
     "link": "Це посилання не працює"
