--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -4,7 +4,8 @@
     "login": "Login",
     "register": "Register",
     "logout": "Logout",
-    "reset": "Reset"
+    "reset": "Reset",
+    "unavailableForThisFeature": "Unavailable for this feature"
   },
   "alerts": {
     "link": "This link doesn't work"
