fix(home): rebase on api for home branche

--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -143,7 +143,7 @@
     "wateringPlace_plural": "Watering places",
     "publicRestroom": "Public restroom",
     "publicRestroom_plural": "Public restrooms",
-    "mostVisitedAssociations": "The most visited associations in recent weeks",
+    "closestAssociations": "The 5 associations closest to you",
     "associations": "Associations",
     "nightShelter": "Night shelter",
     "nightShelter_plural": "Night shelters",
