--- a/src/locales/languages/es.json
+++ b/src/locales/languages/es.json
@@ -143,7 +143,7 @@
     "wateringPlace_plural": "Lugares de riego",
     "publicRestroom": "Baño público",
     "publicRestroom_plural": "Baños público",
-    "mostVisitedAssociations": "Las asociaciones más visitadas en las últimas semanas",
+    "closestAssociations": "Las 5 asociaciones más cercanas a ti",
     "associations": "Asociaciones",
     "nightShelter": "Brote nocturno",
     "nightShelter_plural": "Brote nocturnos",
