--- a/src/locales/languages/uk.json
+++ b/src/locales/languages/uk.json
@@ -144,7 +144,7 @@
     "wateringPlace_plural": "Місце водопою",
     "publicRestroom": "Громадська вбиральня",
     "publicRestroom_plural": "Громадські туалети",
-    "mostVisitedAssociations": "Найбільш відвідувані асоціації за останні тижні",
+    "closestAssociations": "5 найближчих вам асоціацій",
     "associations": "Асоціації",
     "nightShelter": "Притулок для ночівлі",
     "nightShelter_plural": "Нічні притулки",
