--- a/src/locales/languages/ar.json
+++ b/src/locales/languages/ar.json
@@ -143,7 +143,7 @@
     "wateringPlace_plural": "أماكن الري",
     "publicRestroom": "مرحاض عام",
     "publicRestroom_plural": "دورات المياه العامة",
-    "mostVisitedAssociations": "الجمعيات الأكثر زيارة في الأسابيع الأخيرة",
+    "closestAssociations": "5 جمعيات الأقرب إليك",
     "associations": "ذات الصلة",
     "nightShelter": "مأوى ليلي",
     "nightShelter_plural": "الملاجئ الليلية",
