fix(translations): add translations

--- a/src/locales/languages/ar.json
+++ b/src/locales/languages/ar.json
@@ -149,7 +149,8 @@
     "nightShelter_plural": "الملاجئ الليلية",
     "whereCanIGo": "إلى أين يمكنني الذهاب ؟",
     "lookForADoctor": "اعثر على طبيب",
-    "showTheMap": "اعرض الخريطة"
+    "showTheMap": "اعرض الخريطة",
+    "searchAPlace": "ابحث عن مكان"
   },
   "administrativeAssistance": {
     "administrativeAssistance": "المساعدات الإدارية",
