--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -149,6 +149,7 @@
     "nightShelter_plural": "Night shelters",
     "whereCanIGo": "Where can I go ?",
     "lookForADoctor": "Find a doctor",
-    "showTheMap": "Show the map"
+    "showTheMap": "Show the map",
+    "searchAPlace": "Search for a place"
   }
 }
