--- a/src/locales/languages/es.json
+++ b/src/locales/languages/es.json
@@ -149,6 +149,7 @@
     "nightShelter_plural": "Brote nocturnos",
     "whereCanIGo": "¿Dónde puedo ir?",
     "lookForADoctor": "Buscar un médico",
-    "showTheMap": "Mostrar el mapa"
+    "showTheMap": "Mostrar el mapa",
+    "searchAPlace": "Encontrar un lugar"
   }
 }
