--- a/src/locales/languages/fr.json
+++ b/src/locales/languages/fr.json
@@ -151,6 +151,7 @@
     "nightShelter_plural": "Accueils de nuit",
     "whereCanIGo": "Où puis-je me rendre ?",
     "lookForADoctor": "Rechercher un médecin",
-    "showTheMap": "Voir la carte"
+    "showTheMap": "Voir la carte",
+    "searchAPlace": "Rechercher un lieu"
   }
 }
