--- a/src/locales/languages/uk.json
+++ b/src/locales/languages/uk.json
@@ -150,6 +150,7 @@
     "nightShelter_plural": "Нічні притулки",
     "whereCanIGo": "Куди мені піти?",
     "lookForADoctor": "Знайдіть лікаря",
-    "showTheMap": "Показати карту"
+    "showTheMap": "Показати карту",
+    "searchAPlace": "Знайдіть місце"
   }
 }
