fix(translations): add translation

--- a/src/locales/languages/fr.json
+++ b/src/locales/languages/fr.json
@@ -145,7 +145,7 @@
     "wateringPlace_plural": "Points d'eau",
     "publicRestroom": "Toilette publique",
     "publicRestroom_plural": "Toilettes publiques",
-    "closestAssociations": "Les 5 associations les plus proche de vous",
+    "closestAssociations": "Les 5 associations les plus proches de vous",
     "associations": "Associations",
     "nightShelter": "Accueil de nuit",
     "nightShelter_plural": "Accueils de nuit",
