fix(app): responsive on small bornes

--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -138,15 +138,15 @@
     "eventsSoonBorne": "Don't panic! We will soon find new events for you",
     "noEventsPrompt": "No event for the moment",
     "publicShower": "Public shower",
-    "publicShower_plural": "Public showers",
+    "publicShowers": "Public showers",
     "wateringPlace": "Watering place",
-    "wateringPlace_plural": "Watering places",
+    "wateringPlaces": "Watering places",
     "publicRestroom": "Public restroom",
-    "publicRestroom_plural": "Public restrooms",
+    "publicRestrooms": "Public restrooms",
     "closestAssociations": "The 5 associations closest to you",
     "associations": "Associations",
     "nightShelter": "Night shelter",
-    "nightShelter_plural": "Night shelters",
+    "nightShelters": "Night shelters",
     "whereCanIGo": "Where can I go ?",
     "lookForADoctor": "Find a doctor",
     "showTheMap": "Show the map",
