--- a/src/locales/languages/es.json
+++ b/src/locales/languages/es.json
@@ -138,15 +138,15 @@
     "eventsSoonBorne": "¡Que no cunda el pánico! Pronto encontraremos nuevos eventos para usted",
     "noEventsPrompt": "Ningún evento por el momento",
     "publicShower": "Ducha pública",
-    "publicShower_plural": "Duchas pública",
+    "publicShowers": "Duchas pública",
     "wateringPlace": "Lugar de riego",
-    "wateringPlace_plural": "Lugares de riego",
+    "wateringPlaces": "Lugares de riego",
     "publicRestroom": "Baño público",
-    "publicRestroom_plural": "Baños público",
+    "publicRestrooms": "Baños público",
     "closestAssociations": "Las 5 asociaciones más cercanas a ti",
     "associations": "Asociaciones",
     "nightShelter": "Brote nocturno",
-    "nightShelter_plural": "Brote nocturnos",
+    "nightShelters": "Brote nocturnos",
     "whereCanIGo": "¿Dónde puedo ir?",
     "lookForADoctor": "Buscar un médico",
     "showTheMap": "Mostrar el mapa",
