--- a/src/locales/languages/fr.json
+++ b/src/locales/languages/fr.json
@@ -140,15 +140,15 @@
     "eventsSoonBorne": "Pas de panique ! Nous allons bientôt vous trouver de nouveaux événements",
     "noEventsPrompt": "Aucun événement pour le moment",
     "publicShower": "Douche publique",
-    "publicShower_plural": "Douches publiques",
+    "publicShowers": "Douches publiques",
     "wateringPlace": "Point d'eau",
-    "wateringPlace_plural": "Points d'eau",
+    "wateringPlaces": "Points d'eau",
     "publicRestroom": "Toilette publique",
-    "publicRestroom_plural": "Toilettes publiques",
+    "publicRestrooms": "Toilettes publiques",
     "closestAssociations": "Les 5 associations les plus proches de vous",
     "associations": "Associations",
     "nightShelter": "Accueil de nuit",
-    "nightShelter_plural": "Accueils de nuit",
+    "nightShelters": "Accueils de nuit",
     "whereCanIGo": "Où puis-je me rendre ?",
     "lookForADoctor": "Rechercher un médecin",
     "showTheMap": "Voir la carte",
