--- a/src/locales/languages/uk.json
+++ b/src/locales/languages/uk.json
@@ -139,15 +139,15 @@
     "eventsSoonBorne": "Не панікуйте! Скоро ми знайдемо для вас нові події",
     "noEventsPrompt": "На даний момент немає подій",
     "publicShower": "Громадський душ",
-    "publicShower_plural": "Громадські душові",
+    "publicShowers": "Громадські душові",
     "wateringPlace": "Місце водопою",
-    "wateringPlace_plural": "Місце водопою",
+    "wateringPlaces": "Місце водопою",
     "publicRestroom": "Громадська вбиральня",
-    "publicRestroom_plural": "Громадські туалети",
+    "publicRestrooms": "Громадські туалети",
     "closestAssociations": "5 найближчих вам асоціацій",
     "associations": "Асоціації",
     "nightShelter": "Притулок для ночівлі",
-    "nightShelter_plural": "Нічні притулки",
+    "nightShelters": "Нічні притулки",
     "whereCanIGo": "Куди мені піти?",
     "lookForADoctor": "Знайдіть лікаря",
     "showTheMap": "Показати карту",
