--- a/src/locales/languages/ar.json
+++ b/src/locales/languages/ar.json
@@ -138,15 +138,15 @@
     "eventsSoonBorne": "لا تُصب بالذعر! سنجد قريبا أحداث جديدة لك",
     "noEventsPrompt": "لا يوجد حدث في الوقت الراهن",
     "publicShower": "دش عام",
-    "publicShower_plural": "الاستحمام العامة",
+    "publicShowers": "الاستحمام العامة",
     "wateringPlace": "منطقة الري",
-    "wateringPlace_plural": "أماكن الري",
+    "wateringPlaces": "أماكن الري",
     "publicRestroom": "مرحاض عام",
-    "publicRestroom_plural": "دورات المياه العامة",
+    "publicRestrooms": "دورات المياه العامة",
     "closestAssociations": "5 جمعيات الأقرب إليك",
     "associations": "ذات الصلة",
     "nightShelter": "مأوى ليلي",
-    "nightShelter_plural": "الملاجئ الليلية",
+    "nightShelters": "الملاجئ الليلية",
     "whereCanIGo": "إلى أين يمكنني الذهاب ؟",
     "lookForADoctor": "اعثر على طبيب",
     "showTheMap": "اعرض الخريطة",
