add: mobile onboarding

--- a/src/locales/languages/ar.json
+++ b/src/locales/languages/ar.json
@@ -141,5 +141,35 @@
     "english": "إنجليزي",
     "missingTraductionPrompt": "يحتاج التطبيق إلى تغيير اللغة لأن المساعدة الإدارية غير متوفرة باللغة العربية.",
     "missingTraductionTitle": "الترجمة مفقودة"
+  },
+  "mobileOnboarding": {
+    "title": "مرحبًا بك في SANSA!",
+    "subtitle": "حل المساعدة الرقمية للمشردين",
+    "start": "ابدأ",
+    "skip": "تخطي",
+    "next": "التالي",
+    "end": "البدء",
+    "tooltip": [
+      {
+        "title": "يبحث",
+        "description": "يمكنك البحث عن ارتباط باستخدام شريط البحث"
+     },
+     {
+        "title": "منقي",
+        "description": "يمكنك أيضًا البحث عن احتياجاتك باستخدام الفئات"
+     },
+     {
+        "title": "الجمعيات ",
+        "description": "هنا يمكنك الوصول إلى نتائج البحث. بالنقر فوق هذه المنطقة ، ستتمكن من الوصول إلى تفاصيل الارتباط"
+     },
+     {
+      "title": "نتائج أخرى",
+        "description": "بالتمرير إلى اليسار يمكنك رؤية الارتباطات المختلفة"
+     },
+     {
+        "title": "اكتشف المزيد",
+        "description": "من خلال النقر على إدراج الاقتران يمكنك الوصول إلى تفاصيله"
+     }
+    ]
   }
 }
