--- a/src/locales/languages/fr.json
+++ b/src/locales/languages/fr.json
@@ -135,5 +135,35 @@
   },
   "home": {
     "home": "Acceuil"
+  },
+  "mobileOnboarding": {
+    "title": "Bienvenue sur SANSA !",
+    "subtitle": "Solution d’aide numérique aux sans-abris",
+    "start": "Commencer",
+    "skip": "Passer",
+    "next": "Suivant",
+    "end": "Démarrer",
+    "tooltip": [
+      {
+        "title": "Recherchez",
+        "description": "Vous pouvez rechercher une association grâce à la barre de recherche"
+      },
+      {
+        "title": "Filtrez",
+        "description": "Vous pouvez aussi rechercher vos besoins grâce aux catégories"
+      },
+      {
+        "title": "Les associations",
+        "description": "Ici, vous pourrez accéder aux resultats de votre recherche. En cliquant sur cette zone vous aurez accès au détail de l’association"
+      },
+      {
+        "title": "Plus de résultats",
+        "description": "En glissant vers la gauche vous pourrez voir les différentes associations"
+      },
+      {
+        "title": "Informez-vous",
+        "description": "En cliquant sur l’encart de l’assocation vous pourrez accéder à son détail"
+      }
+    ]
   }
 }
