--- a/src/locales/languages/uk.json
+++ b/src/locales/languages/uk.json
@@ -76,6 +76,8 @@
     "seeMore": "Детальніше",
     "lastUpdate": "Останнє оновлення",
     "byAppointement": "За призначенням",
+    "locationPermissionDenied": "У дозволі на доступ до місцезнаходження відмовлено",
+    "networkIssue": "Не можете отримати доступ до даних, будь ласка, перевірте своє з'єднання або зв'яжіться зі службою підтримки",
     "services" : {
       "Acceuil": "Прийом",
       "Alimentation": "Годування",
