--- a/src/locales/languages/es.json
+++ b/src/locales/languages/es.json
@@ -70,7 +70,8 @@
     "service": "Services",
     "servicesOffered": "Servicios propuestos",
     "mission": "Lisión",
-    "showList": "Ver la lista ({{ resultsLength }} Resultados)",
+    "showList": "Ver la lista ({{ resultsLength }} resultados)",
+    "hideList": "Ocultar la lista ({{ resultsLength }} resultados)",
     "learnMore": "Aprende más",
     "seeMore": "Ver más",
     "lastUpdate": "Última actualización",
