--- a/src/locales/languages/ar.json
+++ b/src/locales/languages/ar.json
@@ -71,12 +71,13 @@
     "servicesOffered": "الخدمات المقدمة",
     "mission": "مهمة",
     "showList": "انظر القائمة ({{ resultsLength }} النتائج)",
+    "hideList": " إخفاء القائمة({{ resultsLength }} النتائج)",
     "learnMore": "التعرف على المزيد",
     "seeMore": "شاهد المزيد",
     "lastUpdate": "آخر تحديث",
     "byAppointement": "عن طريق التعيين",
     "locationPermissionDenied": "تم رفض إذن الوصول إلى الموقع الجغرافي",
-    "networkIssue": "لا يمكن الوصول إلى البيانات ، يرجى التحقق من اتصالك أو الاتصال بالدعم",
+    "networkIssue": "",
     "services" : {
       "Acceuil": "استقبال",
       "Alimentation": "إطعام",
