--- a/src/locales/languages/uk.json
+++ b/src/locales/languages/uk.json
@@ -72,6 +72,7 @@
     "servicesOffered": "Пропоновані послуги",
     "mission": "Місія",
     "showList": "Переглянути список ({{ resultsLength }} Результатів)",
+    "hideList": "Приховання списку ({{ resultsLength }} Результатів))",
     "learnMore": "Дізнатися більше",
     "seeMore": "Детальніше",
     "lastUpdate": "Останнє оновлення",
