feat(Traduction): traduct days in spanish

--- a/src/locales/languages/es.json
+++ b/src/locales/languages/es.json
@@ -45,13 +45,13 @@
     "forgotPassword": "¿Ha olvidado su contraseña?"
   },
   "days": {
-    "monday": "Lundi",
-    "tuesday": "Mardi",
-    "wednesday": "Mercredi",
-    "thurday": "Jeudi",
-    "friday": "Vendredi",
-    "saturday": "Samedi",
-    "sunday": "Dimanche"
+    "monday": "Lunes",
+    "tuesday": "Martes",
+    "wednesday": "Miércoles",
+    "thurday": "Jueves",
+    "friday": "Viernes",
+    "saturday": "Sábado",
+    "sunday": "Domingo"
   },
   "search": {
     "search": "Buscar",
