feat(Home) fix few issues with 5 best orga

--- a/src/locales/languages/ar.json
+++ b/src/locales/languages/ar.json
@@ -146,7 +146,7 @@
     "wateringPlaces": "أماكن الري",
     "publicRestroom": "مرحاض عام",
     "publicRestrooms": "دورات المياه العامة",
-    "closestAssociations": "5 جمعيات الأقرب إليك",
+    "closestAssociations": "الجمعيات ال 5 لهذا الأسبوع",
     "associations": "ذات الصلة",
     "nightShelter": "مأوى ليلي",
     "nightShelters": "الملاجئ الليلية",
