--- a/src/locales/languages/es.json
+++ b/src/locales/languages/es.json
@@ -146,7 +146,7 @@
     "wateringPlaces": "Lugares de riego",
     "publicRestroom": "Baño público",
     "publicRestrooms": "Baños público",
-    "closestAssociations": "Las 5 asociaciones más cercanas a ti",
+    "closestAssociations": "Las 5 asociaciones de la semana",
     "associations": "Asociaciones",
     "nightShelter": "Brote nocturno",
     "nightShelters": "Brote nocturnos",
