--- a/src/locales/languages/fr.json
+++ b/src/locales/languages/fr.json
@@ -148,7 +148,7 @@
     "wateringPlaces": "Points d'eau",
     "publicRestroom": "Toilette publique",
     "publicRestrooms": "Toilettes publiques",
-    "closestAssociations": "Les 5 associations les plus proches de vous",
+    "closestAssociations": "Les 5 associations de la semaine",
     "associations": "Associations",
     "nightShelter": "Accueil de nuit",
     "nightShelters": "Accueils de nuit",
