--- a/src/locales/languages/uk.json
+++ b/src/locales/languages/uk.json
@@ -147,7 +147,7 @@
     "wateringPlaces": "Місце водопою",
     "publicRestroom": "Громадська вбиральня",
     "publicRestrooms": "Громадські туалети",
-    "closestAssociations": "5 найближчих вам асоціацій",
+    "closestAssociations": "5 асоціацій тижня",
     "associations": "Асоціації",
     "nightShelter": "Притулок для ночівлі",
     "nightShelters": "Нічні притулки",
