--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -146,7 +146,7 @@
     "wateringPlaces": "Watering places",
     "publicRestroom": "Public restroom",
     "publicRestrooms": "Public restrooms",
-    "closestAssociations": "The 5 associations closest to you",
+    "closestAssociations": "The 5 associations of the week",
     "associations": "Associations",
     "nightShelter": "Night shelter",
     "nightShelters": "Night shelters",
