fix(languages): fix spelling

--- a/src/locales/languages/fr.json
+++ b/src/locales/languages/fr.json
@@ -137,7 +137,7 @@
     }
   },
   "home": {
-    "home": "Acceuil",
+    "home": "Accueil",
     "dashboard": "Dashboard",
     "eventsSoon": "Bientôt de nouveaux événements !",
     "eventsSoonBorne": "Pas de panique ! Nous allons bientôt vous trouver de nouveaux événements",
